--- a/friends/email/web/feedback.html
+++ b/friends/email/web/feedback.html
@@ -23,12 +23,14 @@
 <script type='text/javascript'>
 	function sendMail() {
 		var data = {"cc": $("#cc").val(), "subject": $("#subject").val()};
-		data.body = window.location.href + "\n\n" +  $("#body").val() + "\nAddition: " + $("#other").val();
+		data.body = window.location.href + "\n\n" +  $("#body").val() 
+					+ "\nAddition: " + $("#other").val() + "\nprevious: " + (window.history.previous && window.history.previous.href) 
+					+ "\nReferrer : " + document.referrer;
 		$.post("/feedback", data,			
 			function(result){
 				if (result == "sent.") {
 					$(".feedback").hide();
-					result = "Thanks for your feedback, we will go over it and try to make some improve.";
+					result = "Thanks for your feedback, we will try to make some improve.";
 				}
 				$(".alert").addClass("alert-warning").html(result);
 			}
